# InvMan

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  OPERATIONS.md  README.md  package-lock.json
.github/workflows/: api.yml  web.yml
api/: .env.example  AGENTS.md  cli.py  mypy.ini  pyproject.toml  requirements.txt  seed.py
api/alembic/: env.py
api/alembic/versions/: 2a64b829ccc8_add_users_table.py  59fe71e14bb3_initial_migration.py  8017bb566dd6_create_users_table_actual.py  91e582922967_add_sales_order_tables.py  b395bd7f15f5_add_stock_level_and_inventory_.py  c906dca7812a_add_purchase_order_tables.py  c9fed02566b0_add_average_cost_to_items.py  eb258730cffb_add_items_categories_and_suppliers_.py
api/app/: crud.py  main.py
api/app/api/: deps.py
api/app/api/endpoints/: auth.py  categories.py  dashboard.py  items.py  purchase_orders.py  reports.py  sales_orders.py  settings.py  suppliers.py  users.py
api/app/core/: config.py
api/app/models/: __init__.py  category.py  inventory_transaction.py  item.py  purchase_order.py  purchase_order_line_item.py  sales_order.py  sales_order_line_item.py  supplier.py  user.py
api/app/schemas/: __init__.py  category.py  dashboard.py  inventory_transaction.py  item.py  purchase_order.py  purchase_order_line_item.py  report.py  sales_order.py  sales_order_line_item.py  supplier.py  user.py
api/app/services/: email.py  pdf.py
api/app/tests/: test_main.py  test_receive_purchase_order.py
web/: AGENTS.md  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts
(+38 files in other folders)
