[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true


[tool.poetry]
name = "invman-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.1"}
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
loguru = "^0.7.2"
apryse-sdk = "^10.6.0"
python-barcode = "^0.15.1"
reportlab = "^4.2.0"
svglib = "^1.5.1"
postmarker = "^0.12.1"
slowapi = "^0.1.9"


[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
faker = "^25.2.0"
httpx = "^0.27.0"
ruff = "^0.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "apryse"
url = "https://pypi.apryse.com"
